Fixed text being cut off

--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -77,6 +77,7 @@
   font-weight: 500;
   overflow: hidden;
   text-overflow: ellipsis;
+  line-height: normal;
 }
 
 .card > h2 {
